[package]
name = "entheogen"
description = "generative art primitives"
version = "0.1.0"
authors = ["pantheogen <pan@psychonaut.sh>"]
license = "BSD-2-Clause"
readme = "README.md"
repository = "https://github.com/pantheogen/entheogen"

[dependencies]
alga           = "0.8"
failure        = "0.1"
failure_derive = "0.1"
nalgebra       = "0.17"
num            = "0.2"
palette        = "0.4"

[dependencies.cairo-rs]
version        = "0.6"
features       = ["png"]